--- a/src/Components/TextArea/TextArea.scss
+++ b/src/Components/TextArea/TextArea.scss
@@ -17,5 +17,6 @@
     outline: none;
     padding: 7px;
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+    resize: none;
   }
 }
