--- a/src/Components/TextArea/TextArea.scss
+++ b/src/Components/TextArea/TextArea.scss
@@ -35,6 +35,7 @@
     .textarea_input {
       background-color: #292c33;
       color: #f8f8f8;
+      border-radius: 0px;
       border: none;
       font-size: 14px;
       outline: none;
