--- a/src/Components/TextArea/TextArea.scss
+++ b/src/Components/TextArea/TextArea.scss
@@ -41,7 +41,7 @@
       outline: none;
       padding: 7px;
       resize: none;
-      overflow: auto;
+      overflow: hidden;
       box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
       &.whiteTheme {
         @include white();
